Repo Pattern Implementation 90% done
