# docs/swagger.json
@@ -32,7 +32,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.TaskRequest"
+                            "$ref": "#/definitions/entities.CreateTask"
                         }
                     }
                 ],
@@ -41,6 +41,48 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.Task"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/status/{id}": {
+            "patch": {
+                "description": "Change status of a task by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Change Task Status",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "format": "uint64",
+                        "description": "Task ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Status object to be created",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/entities.StatusChangeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entities.Task"
                         }
                     }
                 }
@@ -73,7 +115,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/entities.Task"
                         }
                     }
                 }
@@ -105,7 +147,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.TaskRequest"
+                            "$ref": "#/definitions/entities.UpdateTask"
                         }
                     }
                 ],
@@ -149,14 +191,69 @@
         }
     },
     "definitions": {
-        "dto.TaskRequest": {
+        "entities.CreateTask": {
             "type": "object",
             "properties": {
                 "description": {
                     "type": "string"
                 },
                 "status": {
+                    "$ref": "#/definitions/entities.Status"
+                },
+                "title": {
                     "type": "string"
+                }
+            }
+        },
+        "entities.Status": {
+            "type": "string",
+            "enum": [
+                "TODO",
+                "DOING",
+                "DONE"
+            ],
+            "x-enum-varnames": [
+                "TODO",
+                "DOING",
+                "DONE"
+            ]
+        },
+        "entities.StatusChangeRequest": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "$ref": "#/definitions/entities.Status"
+                }
+            }
+        },
+        "entities.Task": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/entities.Status"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "entities.UpdateTask": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "status": {
+                    "$ref": "#/definitions/entities.Status"
                 },
                 "title": {
                     "type": "string"
